Added field to difference theory and laboratory course, and showing it on welcome page for student